# sales-lead-generation-bot

./: .gitignore  app.py  experiments.ipynb  generated_leads.json  pyproject.toml
data/: chatbot_nudge.json  faq_data.json  knowledge_base.txt
pages/: chat_page.py  config_loader.py  pricing.py  security.py
utils/: chat.py  tools.py  vector_store.py
